
v0.0.14

  * Use nxt_version.py and maker.py for versioning and distributing.
  
  * API changes 
	Compiler COM:
	-------------
    - added argument '-nt' to '--netx-type-public'
	- the following arguments are now for advanced mode only:
		- '-n', '--netx-type'
		- '-d', '--objdump' (Windows uses included version, Linux uses OS-default version)
		- '-r', '--readelf' (Windows uses included version, Linux uses OS-default version)
		- '-c', '--objcopy' (Windows uses included version, Linux uses OS-default version)
		- '-k', '--keyrom'
		- '-p', '--patch-table'
		- '--openssl-rand-off'
		- '-D', '--define'
		- '-I', '--include'
		- '-S', '--sniplib'
		- '--openssl-exe'
		- '--openssl-options'
	- renamed '-V', '--verbose' (was '-v', '--verbose')
	- renamed '-v', '--version' (was '-V', '--version')
	- added argument '-t', '--template-layout' : provides template layout for HWC and MWC images
	
	Compiler APP:
	-------------
	- renamed '-V', '--verbose' (was '-v', '--verbose')
	- renamed '-v', '--version' (was '-V', '--version')
	- added argument '-nt', '--netx-type-public'
	- the following arguments are now for advanced mode only:
		- '-n', '--netx-type'
		- '-d', '--objdump' (Windows uses included version, Linux uses OS-default version)
		- '-r', '--readelf' (Windows uses included version, Linux uses OS-default version)
		- '-c', '--objcopy' (Windows uses included version, Linux uses OS-default version)
		- '-k', '--keyrom'
		- '-p', '--patch-table'
		- '--openssl-rand-off'
		- '-D', '--define'
		- '-I', '--include'
		- '-S', '--sniplib'
		- '--openssl-exe'
		- '--openssl-options'
	- added argument '-t', '--template-layout' : provides template layout for NAI and NEA images
	- argument '-s', '--sdram_split_offset' now only accepts supported options as offset.
	
  * Added objcopy, objdump and readelf to the windows-distributions.
      -> Linux-distribution expects the tools to be pre-installed
     

  * Add attribute 'do_not_lock_system_cfg' to EXEC chunk. 
