@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<HBootImage type="REGULAR">
+	<Chunks>
+		<Data>
+			<File name="empty.bin" load_address="0x00020000"/>
+		</Data>
+	</Chunks>
+</HBootImage>
