@@ -801,6 +801,31 @@ class TestExpectedBinaries(unittest.TestCase):
     def test_data_file_alias(self):
         self.__test_with_reference_bin('data/data_file_alias.xml', 'data/data_file_alias.bin', 'NETX90', ['--alias', 'FillData=fill_data.bin'], ['data/fill_data.bin'])
 
+    # Error when data chunk has no data
+    def test_data_file_empty_bin(self):
+        self.__test_with_reference_bin_public(
+            'data/data_file_bin_empty.xml',
+            'data/empty.bin', # dummy
+            'netx90',
+            None,
+            ['data/empty.bin'],
+            strExpectedError = "Empty data chunk!")
+
+    # Warning when specific segments to extract from an ELF were specified and empty
+    def test_data_file_empty_elf(self):
+        self.__test_with_reference_bin_public(
+            'data/data_segment_empty.xml',
+            'data/data_segment_empty.elf', # dummy
+            'netx90',
+            [   # extra args
+                '-c', '%%NETX90_OBJCOPY%%',
+                '-d', '%%NETX90_OBJDUMP%%',
+                '-r', '%%NETX90_READELF%%',
+            ],
+            ['data/data_segment_empty.elf'],
+            strExpectedError = # "The data extracted from ELF file "
+                "data_segment_empty.elf, segments .data, is empty!")
+
     def test_data_hex(self):
         self.__test_with_reference_bin('data/data_hex.xml', 'data/data_hex.bin', 'NETX90_MPW', None, None)
 
